# database-instance-provider

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  doc.go  go.mod  go.sum
.github/workflows/: build-deploy.yml  deploy-latest.yml  deploy.yml  go.yml  postsubmit.yml  presubmit.yml
client/go/database/: BUILD.bazel  database.go  database_test.go
client/go/database/mysql/: BUILD.bazel  mysql.go  mysql_test.go
client/go/database/mysql/example/: BUILD.bazel  example_test.go
containers/mysql/: .env  BUILD.bazel  Dockerfile  docker-compose.yml
containers/mysql/container/: BUILD.bazel  main.go
containers/mysql/provider/: BUILD.bazel  main.go  provider.go  provider_test.go
healthcheck/: BUILD.bazel  healthcheck.go
scripts/: genprotos.sh  presubmit.sh
server/lease/: BUILD.bazel  lease.go  lease_test.go
server/lessor/: BUILD.bazel  lessor.go  lessor_test.go
server/lessor/databaseprovider/: BUILD.bazel  databaseprovider.go  databaseprovider_test.go
server/lessor/databaseprovider/fake/: BUILD.bazel  fake.go  fake_test.go
server/proto/: BUILD.bazel  server.pb.go  server.proto  server_grpc.pb.go
server/service/: BUILD.bazel  service.go  service_test.go
server/service/runner/: BUILD.bazel  runner.go  runner_test.go
