load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/karagog/db-provider

# Disable protobuf generation features, so that protobufs are
# checked into the codebase and are consistent between
# Bazel and Go build chains. (Re-)Generate protos using "go generate".
#
# gazelle:proto disable_global

gazelle(name = "gazelle")

go_library(
    name = "db-provider",
    srcs = ["doc.go"],
    importpath = "github.com/karagog/db-provider",
    visibility = ["//visibility:public"],
)

go_test(
    name = "db-provider_test",
    srcs = ["doc_test.go"],
    embed = [":db-provider"],
)
