load("@io_bazel_rules_docker//docker:docker.bzl", "docker_push")

# This rule pushes to a local registry server for testing.
#
# You can start a persistent local registry server with this command:
#  $ docker run -d -p 5000:5000 --restart=always --name registry registry:2
#
# The testing cycle looks something like this:
#
# Build/Push a new image to the local registry via:
#  $ bazel run //containers/mysql:push_local
#
# Pull images from their respective registries:
#  $ docker-compose pull
#
# Start the image:
#  $ docker-compose up
#
# After a few seconds the service will start and can be used by tests.
docker_push(
    name = "push_local",
    image = "//containers/mysql/provider",
    registry = "localhost:5000",
    repository = "karagog/mysql-db-provider",
    tag = "latest",

    # You can also push with a user-specific tag to prevent users'
    # imagers from clobbering each other.
    #tag = "{BUILD_USER}",
)

# This rule pushes to DockerHub. You must have a valid access token in order
# to successfully push this.
#
# To get an access token, you first need access to the repository, and then
# you need to log in to hub.docker.com and go to security settings.
docker_push(
    name = "push",
    image = "//containers/mysql/provider",
    registry = "index.docker.io",
    repository = "karagog/mysql-db-provider",
    tag = "latest",
)
