load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lessor",
    srcs = ["lessor.go"],
    importpath = "github.com/karagog/db-provider/server/lessor",
    visibility = ["//visibility:public"],
    deps = [
        "//server/lessor/databaseprovider",
        "//server/proto",
        "@com_github_golang_glog//:glog",
    ],
)

go_test(
    name = "lessor_test",
    srcs = ["lessor_test.go"],
    embed = [":lessor"],
    deps = [
        "//server/lessor/databaseprovider/fake",
        "@com_github_go_test_deep//:deep",
    ],
)
