load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/karagog/db-provider/server/service",
    visibility = ["//visibility:public"],
    deps = [
        "//server/lessor",
        "//server/proto",
        "@com_github_golang_glog//:glog",
        "@com_github_karagog_clock_go//:clock-go",
    ],
)

go_test(
    name = "service_test",
    srcs = ["service_test.go"],
    embed = [":service"],
    deps = [
        "//server/lessor",
        "//server/lessor/databaseprovider/fake",
        "//server/proto",
        "@com_github_golang_glog//:glog",
        "@com_github_karagog_clock_go//simulated",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
