load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "container_lib",
    srcs = ["main.go"],
    importpath = "github.com/karagog/db-provider/containers/mysql/container",
    visibility = ["//visibility:private"],
    deps = [
        "//client/go/database/mysql",
        "//containers/mysql/provider",
        "//server/lessor",
        "//server/service",
        "//server/service/runner",
        "@com_github_golang_glog//:glog",
        "@com_github_karagog_clock_go//simulated",
        "@com_github_karagog_shell_go//command",
    ],
)

go_binary(
    name = "container",
    embed = [":container_lib"],
    visibility = ["//visibility:public"],
)
