load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "databaseprovider",
    srcs = ["databaseprovider.go"],
    importpath = "github.com/karagog/db-provider/server/lessor/databaseprovider",
    visibility = ["//visibility:public"],
    deps = ["//server/proto"],
)

go_test(
    name = "databaseprovider_test",
    srcs = ["databaseprovider_test.go"],
    embed = [":databaseprovider"],
)
