load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "runner",
    srcs = ["runner.go"],
    importpath = "github.com/karagog/db-provider/server/service/runner",
    visibility = ["//visibility:public"],
    deps = [
        "//server/proto",
        "//server/service",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_test(
    name = "runner_test",
    srcs = ["runner_test.go"],
    embed = [":runner"],
    deps = [
        "//server/lessor",
        "//server/lessor/databaseprovider/fake",
        "//server/proto",
        "//server/service",
        "@com_github_karagog_clock_go//simulated",
        "@org_golang_google_grpc//:grpc",
    ],
)
