load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mysql",
    srcs = ["mysql.go"],
    importpath = "github.com/karagog/db-provider/client/go/database/mysql",
    visibility = ["//visibility:public"],
    deps = [
        "//server/proto",
        "@com_github_go_sql_driver_mysql//:mysql",
    ],
)

go_test(
    name = "mysql_test",
    srcs = ["mysql_test.go"],
    embed = [":mysql"],
    deps = [
        "//server/proto",
        "@com_github_dolthub_go_mysql_server//:go-mysql-server",
        "@com_github_dolthub_go_mysql_server//auth",
        "@com_github_dolthub_go_mysql_server//memory",
        "@com_github_dolthub_go_mysql_server//server",
    ],
)
