load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "fake",
    srcs = ["fake.go"],
    importpath = "github.com/karagog/db-provider/server/lessor/databaseprovider/fake",
    visibility = ["//visibility:public"],
    deps = ["//server/proto"],
)

go_test(
    name = "fake_test",
    srcs = ["fake_test.go"],
    embed = [":fake"],
    deps = [
        "//server/lessor/databaseprovider",
        "//server/proto",
        "@com_github_go_test_deep//:deep",
    ],
)
