load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "example_test",
    srcs = ["example_test.go"],
    # This is an integration test that requires the DB provider service
    # to be running.
    tags = ["integration"],
    deps = [
        "//client/go/database",
        "//client/go/database/mysql",
    ],
)
